# myzora

./: .gitignore
zora-signal-bot/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  PHASE2_CONVERSATIONAL_AI.md  PHASE3_RISK_CONTROLS.md  PROJECT_COMPLETION_SUMMARY.md  README.md  alembic.ini  autostart.bat  check.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  run-background.bat  start.sh
zora-signal-bot/.github/workflows/: ci.yml
zora-signal-bot/app/: __init__.py  config.py  config_manager.py  logging_config.py  main.py
zora-signal-bot/app/api/: wallet_routes.py
zora-signal-bot/app/bot/: __init__.py  application.py  assistant.py  conversation_store.py  inline_buttons.py  middleware.py  renderer.py  tools.py
zora-signal-bot/app/classification/: classifier.py  keywords.py
zora-signal-bot/app/db/: __init__.py  base.py  models.py
zora-signal-bot/app/integrations/: llm_client.py  openai_responses_client.py  social_provider.py  socialdata_client.py  types.py  x_client.py  zora_client.py  zora_discovery.py  zora_field_map.py
zora-signal-bot/app/jobs/: celery_app.py
zora-signal-bot/app/risk/: __init__.py  risk_manager.py  wallet_verification.py
zora-signal-bot/app/scoring/: engine.py  features.py  pipeline.py  policy.py
zora-signal-bot/app/services/: ai_chat.py  feature_flags.py  premium.py  wallet_linking.py
zora-signal-bot/app/trading/: __init__.py  live_execution.py  paper_engine.py  risk_manager.py
zora-signal-bot/migrations/: env.py
zora-signal-bot/migrations/versions/: 0001_initial_schema.py  0002_creator_intent_wallet_linking.py  0003_premium_ai_chat.py
zora-signal-bot/scripts/: generate_migration.sh  init_db.py
zora-signal-bot/tests/: conftest.py
zora-signal-bot/tests/integration/: test_health.py  (+4 more)
(+50 files in other folders)
